# april

android-studio/demos-april/: .gitignore
android-studio/demos-april/demo_3d/: CMakeLists.txt
android-studio/lib/: CMakeLists.txt  build.gradle
april.xcodeproj/: project.pbxproj
aprilpix/aprilpix.xcodeproj/: project.pbxproj
demos/demo_3d/: demo_3d.cpp
demos/demo_advanced/: demo_advanced.cpp
demos/demo_helloworld/: demo_helloworld.cpp
demos/demo_interface/: CustomRenderSystem.cpp  CustomRenderSystem.h  CustomTexture.cpp  CustomTexture.h  CustomWindow.cpp  CustomWindow.h  demo_interface.cpp
demos/demo_motion/: demo_motion.cpp
demos/demo_pix/: demo_pix.cpp
demos/demo_simple/: demo_simple.cpp
demos/demo_tictactoe/: demo_tictactoe.cpp
include/april/: Color.h  RenderState.h  RenderSystem.h  Texture.h  Window.h  aprilUtil.h
lib/jpeg/android-studio/lib/: CMakeLists.txt
lib/png/: pngrutil.c
lib/png/android-studio/lib/: CMakeLists.txt
lib/webp/: .gitignore
msvc/vs2015/: demo_interface.vcxproj  libapril.vcxproj
src/: Application.cpp  RenderHelperLayered2D.h  RenderSystem.cpp  Texture.cpp  Window.cpp
src/async/: AssignWindowCommand.h  ClearColorCommand.h  ClearCommand.h  ClearDepthCommand.h  CreateCommand.h  CreateWindowCommand.h  CustomCommand.h  DestroyCommand.h  DestroyTextureCommand.h  DestroyWindowCommand.h  PresentFrameCommand.h  RenderCommand.h  ResetCommand.h  SetWindowResolutionCommand.h  StateUpdateCommand.h  SuspendCommand.h  TakeScreenshotCommand.h  UnassignWindowCommand.h  UnloadTextureCommand.h  VertexRenderCommand.h
(+57 files in other folders)
